--- a/DDR4XMPEditor.csproj
+++ b/DDR4XMPEditor.csproj
@@ -226,6 +226,7 @@
     <Compile Include="Events\SelectedSPDFileEvent.cs" />
     <Compile Include="Pages\EditorViewModel.cs" />
     <Compile Include="Pages\MenuBarViewModel.cs" />
+    <Compile Include="Pages\MiscViewModel.cs" />
     <Compile Include="Pages\ShellViewModel.cs" />
     <Compile Include="Pages\XMPEditorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -262,6 +263,10 @@
     <Page Include="Pages\MenuBarView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\MiscView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\ShellView.xaml">
       <Generator>MSBuild:Compile</Generator>
